[package]
name = "slip10"
version = "0.3.0"
authors = ["Ngo Iok Ui <wusyong9104@gmail.com>"]
edition = "2018"
description = "SLIP-0010 : Universal private key derivation from master private key"
license = "Apache-2.0/MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = "1.0.0-pre.4"
hmac = "0.9"
sha2 = "0.9"

[dev-dependencies]
hex = "0.4"
