[package]
name = "slip10"
version = "0.4.2"
authors = ["Ngo Iok Ui <wusyong9104@gmail.com>"]
edition = "2018"
description = "SLIP-0010 : Universal private key derivation from master private key"
homepage = "https://github.com/wusyong/slip10"
repository = "https://github.com/wusyong/slip10"
documentation = "https://docs.rs/slip10"
license = "Apache-2.0 OR MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = { version = "1.0", default-features = false, features = ["u64_backend"] }
hmac = { version = "0.9", default-features = false }
sha2 = { version = "0.9", default-features = false }

[dev-dependencies]
hex = "0.4"
